实现从aws加载配置，并从数据库读取数据

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "mainClass": "com.example.demospring.DemoSpringApplication",
             "projectName": "venus-server",
             "preLaunchTask": "gradle: build",
+            "args": "--debug"
         }
     ]
 }
